# EasyEdit

./: .gitignore  pyproject.toml
easyeditor/editors/: editor.py
easyeditor/models/: __init__.py
easyeditor/models/e_rome/: __init__.py  compute_mom2_inv.py  compute_u.py  compute_v.py  e_rome_hparams.py  e_rome_main.py  layer_stats.py
easyeditor/models/rome/: repr_tools.py  rome_hparams.py
easyeditor/util/: alg_dict.py  runningstats.py
experiments/: rome.py
hparams/MEND/: gpt2-xl.yaml
hparams/ROME/: llama-2-7b-hf.yaml
