[project]
authors = [{name = "Lennart Stöpler", email = "lennart@stoepler.de"}]
name = "EasyEdit"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.sdist]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["easyeditor"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12"

[tool.pixi.dependencies]
python = ">=3.9.7"
datasets= "3.*"
einops= "*"
gpustat= "*"
hydra-core= "*"
higher= "*"
importlib-metadata= "*"
matplotlib= "*"
nltk= "*"
numpy= "*"
omegaconf= "*"
pandas= "*"
PyYAML= "*"
scikit-learn= "*"
scipy= "*"
sentence-transformers= "*"
tokenizers= "*"
tqdm= "*"
transformers= "4.46.*"
openai= "1.57.*"
peft= "0.7.*"
timm= "*"
iopath= "*"
opencv= "*"
fairscale= "*"
av= "*"
qwen-vl-utils= "*"
sentencepiece= "*"
rouge = "*"
wandb = "*"
jaxtyping = "*"
pytorch-gpu = "2.7.*"

[tool.pixi.pypi-dependencies]
easyedit = { path = ".", editable = true }
zhipuai = "==2.1.5.20250415"
transcoder_circuits = {git = "https://github.com/aip-hd-research/transcoder_circuits.git"}
transformer-lens = {git = "https://github.com/aip-hd-research/TransformerLens.git"}

[tool.pixi.tasks]
